Improved compability